translateNode/log/build_2023-11-15_00-41-19/translateNode/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/shelton/ros2AndroidApp/translateNode/install/translateNode/lib/python3.10/site-packages/translateNode/translater_node.py", line 28
    			twistMsg.angular.z = -2:
    			                       ^
SyntaxError: invalid syntax

